fixing bracket spacing, revert backend to non-db, merging in point display

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -43,6 +43,10 @@
   background-repeat: no-repeat;
   padding: 30px;
   overflow: hidden;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 :root {
